# opensubtitles-com

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bandit.yaml  makefile  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_helpers.py  version_helpers.py
src/: __init__.py
src/opensubtitles/: __init__.py  download_client.py  exceptions.py  files.py  languages.py  opensubtitles.py  responses.py  srt.py
src/opensubtitlescom/: __init__.py  config.py  download_client.py  exceptions.py  file_utils.py  languages.py  opensubtitles.py  responses.py  responses_base.py  srt.py
src/ost_cli/: __init__.py  config.py  main.py  table.py
tests/: test_opensubtitles.py  tests.py
